[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/TrackBot/Weapons/Jank_Shotty/Jank_Shotty.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.1, 0.25, 0.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.25, 0.25, 0.5 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.497537, 1 )
colors = PoolColorArray( 1, 0.389648, 0, 1, 1, 0.389648, 0, 1, 0.980392, 1, 0.705882, 0.635294 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )
width = 256

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.696591 ), 0.0, 0.74355, 0, 0, Vector2( 1, 0 ), -4.46864, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
width = 128
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.57
emission_shape = 2
emission_box_extents = Vector3( 0.15, 0.15, 0.15 )
direction = Vector3( 0, 0, 1 )
spread = 20.0
initial_velocity = 20.0
scale_curve = SubResource( 4 )
color = Color( 1, 0, 0, 1 )
color_ramp = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
flags_disable_ambient_light = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_color = Color( 1, 0.815686, 0.580392, 1 )

[sub_resource type="QuadMesh" id=7]
material = SubResource( 6 )
size = Vector2( 0.1, 0.1 )

[node name="Jank_Shotty" type="Spatial"]
script = ExtResource( 1 )

[node name="Handle" type="MeshInstance" parent="."]
mesh = SubResource( 1 )

[node name="Boomer" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
mesh = SubResource( 2 )

[node name="Trajectories" type="Spatial" parent="."]

[node name="RayCast_C" type="RayCast" parent="Trajectories"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.751 )
visible = false
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 2
debug_shape_custom_color = Color( 0.0784314, 1, 0, 1 )

[node name="RayCast_R" type="RayCast" parent="Trajectories"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0829164, 0, 0.751 )
visible = false
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 2
debug_shape_custom_color = Color( 0.0784314, 1, 0, 1 )

[node name="RayCast_L" type="RayCast" parent="Trajectories"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0921026, 0, 0.751 )
visible = false
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 2
debug_shape_custom_color = Color( 0.0784314, 1, 0, 1 )

[node name="RayCast_T" type="RayCast" parent="Trajectories"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0719712, 0.751 )
visible = false
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 2
debug_shape_custom_color = Color( 0.0784314, 1, 0, 1 )

[node name="RayCast_B" type="RayCast" parent="Trajectories"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0612742, 0.751 )
visible = false
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 2
debug_shape_custom_color = Color( 0.0784314, 1, 0, 1 )

[node name="Mount_2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145887, 0, 0 )

[node name="Mount_1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.146, 0, 0 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.766063 )
cast_shadow = 0
emitting = false
amount = 100
lifetime = 0.25
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB( -5, -5, -5, 10, 10, 10 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="BlastLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.954683 )
light_color = Color( 1, 0.203922, 0.184314, 1 )
omni_range = 2.0
